Settings > About: Handle canary channel

This changes the Settings page to show the canary channel, but
does not provide UI to allow setting the channel to canary.

It also removes / cleans up some unused code related to the about/help
page.

Bug: 756542
Cq-Include-Trybots: master.tryserver.chromium.linux:closure_compilation
Change-Id: I4ef77ad9e4f20fe27eca1e465ee91533b0f3b23e
Reviewed-on: https://chromium-review.googlesource.com/630557
Reviewed-by: Michael Giuffrida <michaelpg@chromium.org>
Commit-Queue: Steven Bennetts <stevenjb@chromium.org>
Cr-Commit-Position: refs/heads/master@{#497828}
Former-commit-id: b966f3d04dd81c1acd94510b15e918ee737550b7