chrome/browser/ui/webui/help/help_utils_chromeos.cc
@@ -11,13 +11,8 @@
 #include "base/logging.h"
 #include "base/values.h"
 #include "chrome/browser/chromeos/settings/cros_settings.h"
-#include "chrome/grit/generated_resources.h"
 #include "chromeos/chromeos_switches.h"
-#include "chromeos/network/network_state.h"
-#include "chromeos/network/network_type_pattern.h"
 #include "chromeos/settings/cros_settings_names.h"
-#include "third_party/cros_system_api/dbus/service_constants.h"
-#include "ui/base/l10n/l10n_util.h"
 
 namespace help_utils_chromeos {
 
@@ -50,27 +45,6 @@ bool IsUpdateOverCellularAllowed(bool interactive) {
   // Device policy does not allow updates over cellular, as cellular is not
   // included in allowed connection types for updates.
   return false;
-}
-
-base::string16 GetConnectionTypeAsUTF16(const chromeos::NetworkState* network) {
-  const std::string type =
-      network->IsUsingMobileData() ? shill::kTypeCellular : network->type();
-  if (chromeos::NetworkTypePattern::Ethernet().MatchesType(type))
-    return l10n_util::GetStringUTF16(IDS_NETWORK_TYPE_ETHERNET);
-  if (type == shill::kTypeWifi)
-    return l10n_util::GetStringUTF16(IDS_NETWORK_TYPE_WIFI);
-  if (type == shill::kTypeWimax)
-    return l10n_util::GetStringUTF16(IDS_NETWORK_TYPE_WIMAX);
-  if (type == shill::kTypeBluetooth)
-    return l10n_util::GetStringUTF16(IDS_NETWORK_TYPE_BLUETOOTH);
-  if (type == shill::kTypeCellular ||
-      chromeos::NetworkTypePattern::Tether().MatchesType(type)) {
-    return l10n_util::GetStringUTF16(IDS_NETWORK_TYPE_MOBILE_DATA);
-  }
-  if (type == shill::kTypeVPN)
-    return l10n_util::GetStringUTF16(IDS_NETWORK_TYPE_VPN);
-  NOTREACHED();
-  return base::string16();
 }
 
 }  // namespace help_utils_chromeos
