chrome/browser/ui/webui/help/version_updater_chromeos.cc
@@ -8,6 +8,7 @@
 
 #include "base/bind.h"
 #include "base/bind_helpers.h"
+#include "base/strings/string16.h"
 #include "base/strings/string_number_conversions.h"
 #include "chrome/browser/browser_process.h"
 #include "chrome/browser/chromeos/login/startup_utils.h"
@@ -22,8 +23,10 @@
 #include "chromeos/network/network_handler.h"
 #include "chromeos/network/network_state.h"
 #include "chromeos/network/network_state_handler.h"
+#include "chromeos/network/network_type_pattern.h"
 #include "chromeos/settings/cros_settings_names.h"
 #include "content/public/browser/web_contents.h"
+#include "third_party/cros_system_api/dbus/service_constants.h"
 #include "ui/base/l10n/l10n_util.h"
 
 using chromeos::CrosSettings;
@@ -76,6 +79,27 @@ bool IsAutoUpdateDisabled() {
   return update_disabled;
 }
 
+base::string16 GetConnectionTypeAsUTF16(const chromeos::NetworkState* network) {
+  const std::string type =
+      network->IsUsingMobileData() ? shill::kTypeCellular : network->type();
+  if (chromeos::NetworkTypePattern::Ethernet().MatchesType(type))
+    return l10n_util::GetStringUTF16(IDS_NETWORK_TYPE_ETHERNET);
+  if (type == shill::kTypeWifi)
+    return l10n_util::GetStringUTF16(IDS_NETWORK_TYPE_WIFI);
+  if (type == shill::kTypeWimax)
+    return l10n_util::GetStringUTF16(IDS_NETWORK_TYPE_WIMAX);
+  if (type == shill::kTypeBluetooth)
+    return l10n_util::GetStringUTF16(IDS_NETWORK_TYPE_BLUETOOTH);
+  if (type == shill::kTypeCellular ||
+      chromeos::NetworkTypePattern::Tether().MatchesType(type)) {
+    return l10n_util::GetStringUTF16(IDS_NETWORK_TYPE_MOBILE_DATA);
+  }
+  if (type == shill::kTypeVPN)
+    return l10n_util::GetStringUTF16(IDS_NETWORK_TYPE_VPN);
+  NOTREACHED();
+  return base::string16();
+}
+
 // Returns whether an update is allowed. If not, it calls the callback with
 // the appropriate status. |interactive| indicates whether the user is actively
 // checking for updates.
@@ -101,8 +125,7 @@ bool EnsureCanUpdate(bool interactive,
     return false;
   } else if (status == NETWORK_STATUS_DISALLOWED) {
     base::string16 message = l10n_util::GetStringFUTF16(
-        IDS_UPGRADE_DISALLOWED,
-        help_utils_chromeos::GetConnectionTypeAsUTF16(network));
+        IDS_UPGRADE_DISALLOWED, GetConnectionTypeAsUTF16(network));
     callback.Run(VersionUpdater::FAILED_CONNECTION_TYPE_DISALLOWED, 0,
                  std::string(), 0, message);
     return false;
